<resources>

    <string name="app_versionName">0.1 alpha
    </string>

    <string name="app_name">Einfach Sparen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_testData">Testdaten generieren</string>
    <string name="action_tour">Tour</string>
    <string name="action_about">Info</string>
    <string name="action_createNewPeriod">Neue Periode anlegen</string>
    <string name="action_manageIncome">Einnahmen verwalten</string>
    <string name="action_manageExpenses">Ausgaben verwalten</string>
    <string name="action_manageStandardIncome">Standardeinnahmen verwalten</string>
    <string name="action_manageStandardExpenses">Standardausgaben verwalten</string>
    <string name="action_adminArea">Admin Bereich</string>
    <string name="action_showPeriods">Perioden anzeigen</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Dashboard texts -->
    <string name="currentExpensesLabel">Aktuelle Ausgaben:</string>
    <string name="plannedExpensesLabel">Geplante Ausgaben:</string>
    <string name="budgetLabel">Rest Budget:</string>
    <string name="budgetPerDayLabel">Budget/Tag:</string>
    <string name="lastExpensesListTitle">Letzte Ausgaben:</string>
    <string name="remainingDaysLabel">Verbleibende Tage:</string>
    <string name="approximatedSavingLabel">Vsl. Sparbetrag:</string>
    <string name="startingValueDisplay">--</string>

    <!-- Dialog keine aktuelle Periode vorhanden -->
    <string name="noCurrentPeriodFoundTitle">Keine Periode gefunden</string>
    <string name="noCurrentPeriodFound">Es existiert noch keine akutelle Periode. Diese ist
    für die Planung aber notwendig. Möchten Sie jetzt eine neue Periode anlegen?</string>
    <string name="createNewPeriodButtonText">Neue Periode anlegen...</string>

    <!-- Texte für Activity zum Anlegen einer Periode -->
    <string name="createPeriodActivityTitle">Periode anlegen</string>
    <string name="createPeriodExistingCurrentPeriodInfoText">Es existiert bereits eine aktuelle Periode.
        Beim Anlegen der neuen Periode wird das Enddatum der aktuellen Periode auf das Startdatum
        der neuen Periode gesetzt.</string>

    <!-- Transaction field names as hints in forms -->
    <string name="transactionTitle">Bezeichnung</string>
    <string name="transactionValue">Betrag</string>
    <string name="transactionCategory">Kategorie</string>
    <string name="transactionRecurring">Wiederkehrend</string>
    <string name="transactionRecurringHint">Wenn &quot;Wiederkehrend&quot; gesetzt ist, wird der Wert
    beim Anlegen einer neuen Periode automatisch verbucht.</string>
    <string name="title_activity_edit_transaction">Transaktion bearbeiten</string>

    <!-- Confirmation Dialog -->
    <string name="confirmQuestion">Sind Sie sicher?</string>
    <string name="confirmYes">Ja</string>
    <string name="confirmNo">Nein</string>

    <!-- Tour Dialog -->
    <string name="tourQuestion">Anscheinend starten Sie Einfach Sparen zum ersten Mal. Möchten Sie die Kurzeinführung lesen?</string>
    <string name="tourYes">Ja</string>
    <string name="tourNo">Nein</string>

    <!-- Generic Transaction Activity texts -->
    <string name="title_activity_transaction_list">-</string>
    <string name="title_activity_create_transaction">-</string>
    <string name="title_income_list">Alle Einnahmen</string>
    <string name="title_expense_list">Alle Ausgaben</string>
    <string name="title_create_expense">Neue Ausgabe</string>
    <string name="title_create_income">Neue Einnahme</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="income_list_hidden">Die Anzeige der Einnahmen wurde in den Einstellungen deaktiviert</string>

    <!-- period list activity -->
    <string name="title_activity_period_list">Periodenübersicht</string>

    <!-- Period details activity -->
    <string name="title_activity_period_details">Details für Periode</string>

    <!-- General texts -->
    <string name="incomes">Einnahmen</string>
    <string name="expenses">Ausgaben</string>
    <string name="current">(Aktuell)</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Tour Texts -->

    <string name="tour_overview_title">Überblick</string>

    <string name="tour_overview_description">Einfach Sparen soll dem Anwender einen Überblick über seine
        aktuellen Ausgaben und sein aktuell verbleibendes Budget verschaffen und ihn dabei unterstützen, monatlich einen Sparbetrag beiseite zu legen. Dazu werden auf der Hauptseite verschiedene
        Werte angezeigt:</string>
    <string name="tour_overview_explaination">Zunächst werden die aktuellen Ausgaben und die geplanten Ausgaben
    angezeigt. Die geplanten Ausgaben ergeben sich aus dem bisherigen Einkommen und dem Sparziel. Die Ausgabe
        dieser Werte kann deaktiviert werden (mehr Privatsphäre).
        Zusätzlich dazu wird das restlich verfügbare Budget und das für jeden Tag verfügbare Budget (ergibt
        sich aus den restlichen Tagen und dem verbleibenden Budget) angezeigt.
        Außerdem werden die verbleibenden Tage der Periode und der aktuell voraussichtliche Sparbetrag angezeigt.
        Dieser ergibt sich aus dem geplanten Sparbetrag und dem verbleibenden Budget.
        Zuletzt wird das bis zum aktuellen Tag verbleibende Budget angezeigt. Dabei wird von einem linearen
        Geldverbrauch ab Periodenbeginn ausgegangen, wobei die regelmäßig anfallenden Ausgaben bereits abgezogen sind.
    </string>

    <string name="tour_period_title">Perioden</string>
    <string name="tour_period_description">Alle Berechnungen der App werden in Perioden organisiert. Diese haben
    einen definierten Anfang und ein Ende. Für jede Periode kann ein Sparziel festgelegt werden.</string>
    <string name="tour_period_details">Es ist immer nur eine Periode gleichzeitig aktiv. Beim Anlegen einer neuen
    Periode wird die vorherige abgeschlossen. Wenn bereits wiederkehrende Einnahmen oder Ausgaben definiert wurden,
    werden diese bei Anlage einer neuen Periode automatisch gebucht.</string>

    <string name="tour_transaction_title">Transaktionen</string>
    <string name="tour_transaction_description">Zweck der App ist die möglichst einfache Erfassung von
    Einnahmen und Ausgaben. Für jede Transaktion kann angegeben werden, ob diese wiederkehrend ist. In
    diesem Fall wird sie bei jeder neuen Periode automatisch verbucht.</string>
    <string name="tour_transaction_details">Zusätzlich dazu können für Transaktionen Kategorien vergeben
    werden. Diese Funktionalität kann in den Einstellungen aktiviert werden. Wenn für eine Transaktion
    bereits eine Kategorie vergeben wurde, wird diese automatisch vorgeschlagen. In der Übersicht über
    Einnahmen oder Ausgaben können diese bearbeitet oder gelöscht werden.</string>

    <string name="tour_privacy_title">Privatsphäre</string>
    <string name="tour_privacy_description">In den Einstellungen kann die Anzeige der bisherigen und geplanten
    Ausgaben deaktiviert werden. Außerdem kann eingestellt werden, dass die Einnahmen nicht in der Liste
    angezeigt werden.</string>
    <string name="tour_privacy_details">Die Daten, die in der App erfasst werden, werden lediglich auf
    dem Gerät gespeichert.</string>

    <string name="tour_widget_title">Widgets</string>
    <string name="tour_widget_description">Zur schnellen Erfassung und zur Anzeige der Werte auf
    dem Startbildschirm wird ein Widget mitgeliefert.</string>
    <string name="tour_widget_details">Durch Antippen einer der Buttons auf dem Widget können Ausgaben
    mit den vordefinierten Beträgen schnell erfasst werden. Diese Ausgaben können nachträglich angepasst werden.</string>

    <!-- Preferences -->

    <string name="pref_title_useTags">Kategorien verwenden</string>
    <string name="pref_description_useTags">Aktiviert Kategorien, nach denen die Einnahmen und
        Ausgaben aufgeschlüsselt werden können
    </string>
    <string name="pref_key_useTags">use_tags</string>

    <string name="pref_title_expensesOnDashboard">Ausgaben ausblenden</string>
    <string name="pref_description_expensesOnDashboard">Blendet die Ausgaben auf dem Dashboard aus.
    </string>
    <string name="pref_key_expensesOnDashboard">expenses_dashboard_switch</string>

    <string name="pref_title_showExpenseList">Einnahmen anzeigen</string>
    <string name="pref_description_showExpenseList">Blendet die Einnahmen in der Einnahmenliste aus.
    </string>
    <string name="pref_key_showIncomeList">income_showList</string>
    <string name="title_activity_tour">Tour</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_about">Info</string>
    <string name="about_headline">Über einfach Sparen</string>
    <string name="about_author">Entwickler: Martin Lepsy</string>
    <string name="about_version">Version: </string>
    <string name="about_sendFeedback">Feedback senden</string>
    <string name="about_rate_app">App bewerten</string>
    <string name="about_no_mail_client_found">There are no email clients installed.</string>
    <string name="about_mailto">einfachsparen.app@gmail.com</string>
    <string name="about_mailsubject">Feedback zu Einfach Sparen</string>
    <string name="about_mail_placeholder">Bitte hier Feedback eingeben :)</string>
    <string name="appwidget_text">SNÄRZ</string>
    <string name="add_widget">Add widget</string>
    <string name="expense_from_home_screen_title">Ausgabe vom</string>
    <string name="widget_expense_added">hinzugefügt</string>
    <string name="remaining_expenses_per_today">Bis heute verbleibendes Budget:</string>

    <string name="tour_taken_key">isTourTaken</string>
    <string name="title_activity_edit_period">Periode bearbeiten</string>
    <string name="title_activity_period_category_overview">Category Overview</string>

</resources>
