<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/action_newPeriod"
            android:orderInCategory="100"
            android:title="@string/action_createNewPeriod"
            android:icon="@drawable/ic_action_clock"
            />
    </group>
    <group>
        <item
            android:id="@+id/action_manageExpenses"
            android:orderInCategory="100"
            android:title="@string/action_manageExpenses"
            android:icon="@drawable/ic_action_minus"
            />
        <item
            android:id="@+id/action_manageIncome"
            android:orderInCategory="100"
            android:title="@string/action_manageIncome"
            android:icon="@drawable/ic_action_add"
            />
        <item
            android:id="@+id/action_showPeriods"
            android:orderInCategory="100"
            android:title="@string/action_showPeriods" />
    </group>
    <group>
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/action_adminArea"
            android:orderInCategory="100"
            android:title="@string/action_adminArea" />
    </group>

</menu>
