<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.martinlepsy.einfachsparen.forms.EditTransactionActivity"
    tools:showIn="@layout/activity_edit_transaction">

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTransactionNameInput"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:completionThreshold="1"
        android:hint="@string/transactionTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTransactionValueInput"
        android:layout_below="@+id/editTransactionNameInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTransactionNameInput"
        android:hint="@string/transactionValue" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/transactionCategory"
        android:id="@+id/editTransactionTagInput"
        android:layout_below="@+id/editTransactionValueInput"
        android:layout_alignParentStart="true"
        android:completionThreshold="1"
        android:layout_alignEnd="@+id/editTransactionValueInput"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactionRecurring"
        android:id="@+id/editTransactionRecurringInput"
        android:hint="@string/transactionRecurring"
        android:layout_below="@+id/editTransactionTagInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTransactionTagInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/transactionRecurringHint"
        android:id="@+id/editTransactionRecurringLabel"
        android:layout_below="@+id/editTransactionRecurringInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTransactionRecurringInput" />
</RelativeLayout>
