<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.martinlepsy.einfachsparen.forms.CreateTransactionActivity"
    tools:showIn="@layout/activity_create_transaction">


    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createTransactionTitleInput"
        android:layout_alignParentTop="true"
        android:hint="@string/transactionTitle"
        android:layout_alignParentEnd="true"
        android:completionThreshold="1"
        android:layout_alignParentStart="true"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/createTransactionValueInput"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/createTransactionValueInput"
        android:layout_below="@+id/createTransactionTitleInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createTransactionTitleInput"
        android:hint="@string/transactionValue"
        android:imeOptions="actionDone"/>

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createTransactionTagInput"
        android:layout_below="@+id/createTransactionValueInput"
        android:completionThreshold="1"
        android:layout_alignParentStart="true"
        android:hint="@string/transactionCategory"
        android:layout_alignEnd="@+id/createTransactionValueInput" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactionRecurring"
        android:id="@+id/createTransactionRecurringInput"
        android:hint="@string/transactionRecurringHint"
        android:layout_below="@+id/createTransactionTagInput"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/transactionRecurringHint"
        android:id="@+id/createTransactionRecurringHint"
        android:layout_below="@+id/createTransactionRecurringInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createTransactionRecurringInput" />
</RelativeLayout>
