<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="martinigt.einfachsparen.forms.CreateExpenseActivity"
    tools:showIn="@layout/activity_create_expense">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createExpenseTitleInput"
        android:layout_alignParentTop="true"
        android:hint="@string/transactionTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/createExpenseValueInput"
        android:layout_below="@+id/createExpenseTitleInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createExpenseTitleInput"
        android:hint="@string/transactionValue" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactionRecurring"
        android:id="@+id/createExpenseRecurringInput"
        android:layout_below="@+id/createExpenseValueInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createExpenseValueInput"
        android:hint="@string/transactionRecurringHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/transactionRecurringHint"
        android:id="@+id/createIncomeRecurringHint"
        android:layout_below="@+id/createExpenseRecurringInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createExpenseRecurringInput" />

</RelativeLayout>
